--- a/SMAH.html
+++ b/SMAH.html
@@ -23,6 +23,25 @@
                   <li> <button class="btn"> Hire Me </button></li>
                </ul>
            </nav>
+
+           <section id="banner">
+            <div class="banner-content">
+                <h2>Hi! I am</h2>
+                <h1> Sheikh Muntaqim Ahmed</h1>
+            <p>A web developer who enjoys turning ideas into simple, 
+                beautiful, and functional websites. My goal is to keep learning
+                and build projects that solve real problems.</p>
+                <div>
+                    <button class="btn">Download CV</button>
+                     <button class="btn">Contact</button>
+                </div>
+            </div>
+            
+            <div class="banner-image">
+                  <img src="images/muy.png">
+            </div>
+
+           </section>
     </header>
 </body>
 </html>
