--- a/SMAH.html
+++ b/SMAH.html
@@ -40,8 +40,41 @@
             <div class="banner-image">
                   <img src="images/muy.png">
             </div>
-
            </section>
     </header>
+
+      <section id="about">
+        <div class="about-container">
+             <div class="section-heading">
+                <h2>About Me</h2>
+                <p>I am a designer & developer with a passion for web design. 
+                    I enjoy developing simple, clean and slick websites that provide real value to the end user. 
+                    Thousands of clients have procured exceptional resulfs while working with me. 
+                    Delivering work within time and budget which meets clients requirements in our mata.</p>
+             </div>
+
+             <div class="about-info">
+                <div class="info-card">
+                    <p>Name</p>
+                    <h4>Sheikh Muntaqim</h4>
+                </div>
+                <div class="about-info">
+                <div class="info-card">
+                    <p>Email</p>
+                    <h4>sheikhcode@gmail.com</h4>
+                </div>
+                <div class="about-info">
+                <div class="info-card">
+                    <p>BirthDay</p>
+                    <h4>7th April, 2007</h4>
+                </div>
+                <div class="about-info">
+                <div class="info-card">
+                    <p>Location</p>
+                    <h4>Dhaka</h4>
+                </div>
+             </div>
+        </div>
+      </section>
 </body>
 </html>
