--- a/SMAH.html
+++ b/SMAH.html
@@ -76,5 +76,51 @@
              </div>
         </div>
       </section>
+
+      <section id="skills">
+             <div class="skills-container">
+                <div class="section-heading"> </div>
+                   <h2>What I Do</h2>
+                   <p> I have more than 1 years experience building software 
+                    for clients all over the world. Below is a quick overview
+                    of my main technical skill sets and technologies i use. 
+                    Want to find out more about my experience? Check out my 
+                    online resume and project portfolio.</p>
+                 </div>
+                   <br> <br> <br> 
+                 <div class="skill-box">
+                    <div class="skill-card">
+                        <img src="images/js.png">
+                        <h3>Java Script</h3>
+                        <p> List skill/technologies here. You can change the icon above to
+                            any of the 1500+ FontAwesome 5 free icons available.
+                            Aenean commodo ligula eget dolor.</p>
+                        </div>
+
+                    <div class="skill-card">
+                        <img src="images/react.png">
+                        <h3>React</h3>
+                        <p> List skill/technologies here. You can change the icon above to
+                            any of the 1500+ FontAwesome 5 free icons available.
+                            Aenean commodo ligula eget dolor.</p>
+                    </div>
+
+                    <div class="skill-card">
+                        <img src="images/nodejs.png">
+                        <h3>Node.js</h3>
+                        <p> List skill/technologies here. You can change the icon above to
+                            any of the 1500+ FontAwesome 5 free icons available.
+                            Aenean commodo ligula eget dolor.</p>
+                    </div>
+
+                    <div class="skill-card">
+                        <img src="images/mongo.png">
+                        <h3>MongoDB</h3>
+                        <p> List skill/technologies here. You can change the icon above to
+                            any of the 1500+ FontAwesome 5 free icons available.
+                            Aenean commodo ligula eget dolor.</p>
+                    </div>
+             </div>    
+      </section>
 </body>
 </html>
