my first portfolio website practise

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
      <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="SMAH.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body class="font-open-sans">
      
@@ -81,6 +81,7 @@
              <div class="skills-container">
                 <div class="section-heading"> </div>
                    <h2>What I Do</h2>
+                   <br> 
                    <p> I have more than 1 years experience building software 
                     for clients all over the world. Below is a quick overview
                     of my main technical skill sets and technologies i use. 
@@ -121,6 +122,15 @@
                             Aenean commodo ligula eget dolor.</p>
                     </div>
              </div>    
+      </section>
+        
+      <section id="resume">
+        <div class="section-heading">
+             <h2>A Summary Of My Resume</h2>
+        </div>
+
+
+
       </section>
 </body>
 </html>
